# Keytainer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml  secret-scan.yml
docs/superpowers/mockups/: generator-panel.html
docs/superpowers/plans/: 2026-06-07-generator-upgrade.md  2026-06-07-password-history.md  2026-06-07-password-reuse-audit.md  2026-06-07-password-strength-meter.md
docs/superpowers/specs/: 2026-06-07-generator-upgrade-design.md  2026-06-07-password-history-design.md  2026-06-07-password-reuse-audit-design.md  2026-06-07-password-strength-meter-design.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit.rs  backup.rs  clipboard.rs  commands.rs  error.rs  generator.rs  keychain.rs  lib.rs  main.rs  paths.rs  session.rs  settings.rs  totp.rs
src-tauri/src/crypto/: aead.rs  kdf.rs  mod.rs
src-tauri/src/vault/: crud.rs  mod.rs  store.rs
src/components/: StrengthMeter.test.tsx  StrengthMeter.tsx  TotpDisplay.test.tsx  TotpDisplay.tsx
src/lib/: i18n.test.tsx  i18n.tsx  ipc.ts  strength.test.ts  strength.ts  types.ts
src/routes/: Audit.test.tsx  Audit.tsx  ItemDetail.test.tsx  ItemDetail.tsx  List.test.tsx  List.tsx  Settings.test.tsx  Settings.tsx  Setup.test.tsx  Setup.tsx  Unlock.test.tsx  Unlock.tsx
src/test/: render.tsx  setup.ts
