[package]
name = "keytainer"
version = "0.1.2"
description = "Keytainer — local-only password manager"
authors = ["Rafael <rafael.tech.career@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "keytainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
getrandom = "0.2"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base32 = "0.5"

# Memory safety for secrets
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Identifiers and time
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime (for timers)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Errors
thiserror = "1"

# Clipboard (Phase 3, optional so Phase 1 tests don't need dbus)
arboard = { version = "3", optional = true }

# OS keychain (optional fast-unlock, Phase 4)
keyring = { version = "3", features = ["sync-secret-service"], optional = true }

[features]
default = ["clipboard", "keychain"]
clipboard = ["dep:arboard"]
keychain = ["dep:keyring"]

[dev-dependencies]
hex = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
